--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: audiostream
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
+    startCommand: gunicorn --bind 0.0.0.0:10000 app:app
     plan: free
     autoDeploy: false
     envVars:
